test/corpus/control-flow.txt
==================
control flow
==================

if age >= 18 or something_else {
  print("this")
} else {
  print("that")
}

if !has_served {}

---

(program
  (statement
    (if_statement
      condition: (expression
        expr: (binary_expression
          left: (expression
            expr: (binary_expression
              left: (expression
                expr: (identifier))
              operator: (greater_than_or_equal)
              right: (expression
                expr: (primitive_value
                  primitive: (number)))))
          operator: (or)
          right: (expression
            expr: (identifier))))
      body: (block
        (statement
          (print_statement
            arguments: (paren_arguments
              (expression
                expr: (primitive_value
                  primitive: (string
                    chunk: (string_content))))))))
      else: (else_statement
        body: (block
          (statement
            (print_statement
              arguments: (paren_arguments
                (expression
                  expr: (primitive_value
                    primitive: (string
                      chunk: (string_content)))))))))))
  (statement
    (if_statement
      condition: (expression
        expr: (unary_expression
          operator: (bang)
          operand: (expression
            expr: (identifier))))
      body: (block))))
