test/corpus/enums.txt
==================
enums
==================

enum Payload {
  Plain,
  Rich
}

let data = Payload::Plain

---

(program
  (statement
    (enum_definition
      name: (identifier)
      variant: (enum_variant
        variant: (identifier))
      variant: (enum_variant
        variant: (identifier))))
  (statement
    (variable_definition
      binding: (variable_binding)
      name: (identifier)
      (assign)
      value: (expression
        expr: (static_member_access
          target: (identifier)
          (double_colon)
          member: (identifier))))))
