test/corpus/functions.txt
==================
Function definitions
==================

fn foobar() {
  "Hello, world!"
}

fn greet(person: Str) Str {
}

fn add(x: Num, y: Num) Num {
}

---

(source_file
	(statement
  	(function_definition
  		(identifier)
  	 	(parameters)
  	  (block
     	  (primitive_value (string))
     	)
  	)
  )
  (statement
  	(function_definition
  		(identifier)
   		(parameters
     		(param_def
      		(identifier)
        	(primitive_type)
      	)
			)
    	(return_type
				(primitive_type)
			)
    	(block)
  	)
  )
  (statement
  	(function_definition
  		(identifier)
  	 	(parameters
  	  	(param_def
					(identifier)
					(primitive_type)
				)
				(param_def
					(identifier)
					(primitive_type)
				)
  	  )
  	  (return_type (primitive_type))
  	  (block)
  	)
  )
)
