test/corpus/iteration.txt
==================
iteration
==================

for i in 1...10 {
	print(i)
}

for i in 1...(something - other) {
	print(i)
}
---

(program
	(statement
		(for_loop
			cursor: (identifier)
			range: (expression expr: (binary_expression
				left: (expression expr: (primitive_value primitive: (number)))
				operator: (inclusive_range)
				right: (expression expr: (primitive_value primitive: (number)))
			))
			statement_block: (block
				(statement
					(print_statement
						arguments: (paren_arguments (expression expr: (identifier)))
					)
				)
			)
		)
	)

	(statement
		(for_loop
			cursor: (identifier)
			range: (expression expr: (binary_expression
				left: (expression expr: (primitive_value primitive: (number)))
				operator: (inclusive_range)
				right: (expression
				  expr: (expression expr: (binary_expression
						left: (expression expr: (identifier))
						operator: (minus)
						right: (expression expr: (identifier)))))))
			statement_block: (block
				(statement
					(print_statement
						arguments: (paren_arguments (expression expr: (identifier)))
					)
				)
			)
    )
	)
)
