test/corpus/lists.txt
==================
lists
==================

let empty: [Num] = []
let numbers = [1, 2, 3]
let strings: [Str] = ["a", "b","c"]
let booleans: [Bool] = [true, false]

---

(program
  (statement
    (variable_definition
      binding: (variable_binding)
      name: (identifier)
      type: (type
        (list_type
          inner: (type
            (primitive_type
              (num)))))
      (assign)
      value: (expression
        expr: (list_value))))
  (statement
    (variable_definition
      binding: (variable_binding)
      name: (identifier)
      (assign)
      value: (expression
        expr: (list_value
          inner: (number)
          inner: (number)
          inner: (number)))))
  (statement
    (variable_definition
      binding: (variable_binding)
      name: (identifier)
      type: (type
        (list_type
          inner: (type
            (primitive_type
              (str)))))
      (assign)
      value: (expression
        expr: (list_value
          inner: (string
            chunk: (string_content))
          inner: (string
            chunk: (string_content))
          inner: (string
            chunk: (string_content))))))
  (statement
    (variable_definition
      binding: (variable_binding)
      name: (identifier)
      type: (type
        (list_type
          inner: (type
            (primitive_type
              (bool)))))
      (assign)
      value: (expression
        expr: (list_value
          inner: (boolean)
          inner: (boolean))))))
