test/corpus/loops.txt
==================
loops
==================

while count <= 9 {
}
---

(source_file
  (statement
		(while_loop
			condition: (binary_expression
				left: (identifier)
				operator: (less_than_or_equal)
				right: (primitive_value (number))
			)
			(block)
		)
	)
)
