test/corpus/member-access.txt
==================
Member Access
==================

let initialized: [Str:Bool] = [:]
initialized.count
initialized.put("key", true)
location.point.x
---

(program
  (statement
    (variable_definition
      binding: (variable_binding)
      name: (identifier)
      type: (type
        (map_type
          key: (str)
          value: (type
            (primitive_type
              (bool)))))
      (assign)
      value: (expression
        expr: (map_value))))
  (statement
    (expression
      expr: (member_access
        target: (identifier)
        operator: (period)
        member: (identifier))))
  (statement
    (expression
      expr: (member_access
        target: (identifier)
        operator: (period)
        member: (function_call
          target: (identifier)
          arguments: (paren_arguments
            argument: (expression
              expr: (primitive_value
                primitive: (string
                  chunk: (string_content))))
            argument: (expression
              expr: (primitive_value
                primitive: (boolean))))))))
  (statement
    (expression
      expr: (member_access
        target: (identifier)
        operator: (period)
        member: (member_access
          target: (identifier)
          operator: (period)
          member: (identifier))))))
