test/corpus/variables.txt
==================
Variable declaration
==================

let name: Str = "John"
mut age: Num = 25
let is_something = false

---

(source_file
  (variable_definition
  	(variable_binding)
  	(identifier)
  	(primitive_type)
  	(primitive_value (string))
  )

  (variable_definition
  	(variable_binding)
  	(identifier)
  	(primitive_type)
  	(primitive_value (number))
  )

  (variable_definition
  	(variable_binding)
  	(identifier)
    (primitive_value (boolean))
  )
)
